# league_stat_check

./: .gitignore  Cargo.toml  ReadMe.md
docs/: README.md
src/: main.rs
src/frontend/scripts/: image_hover.js
src/frontend/styles/: styles.css
src/frontend/templates/: base.html  score.html
src/handlers/: handlers.rs
src/utils/: data_parsing.rs  mod.rs  retrive_data.rs  utils.rs
tests/: lemme_test.rs
