[package]
name = "league_stat_check"
version = "0.1.0"
edition = "2024"

[dependencies]
tar = "0.4.44"
rand = "0.9.0"
axum = "0.8.1"  
tera = "1.20.0"
flate2 = "1.1.1"
serde_json = "1.0.140"
tokio = { version = "1.44.0", features = ["full"] }
serde = { version = "1.0.218", features = ["derive"] }
reqwest = { version = "0.12.15", features = ["json", "stream"] }
tower-http = { version = "0.6.2", features = ["fs", "trace"]}

